k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-eyego
  labels:
    name: hello-eyego
