k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-eyego-service
  namespace: hello-eyego
  labels:
    app: hello-eyego
spec:
  selector:
    app: hello-eyego
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
